fix height of zplane components to reduce shifting

--- a/css/zAxisPreview.css
+++ b/css/zAxisPreview.css
@@ -4,14 +4,14 @@
 }
 
 .z-planes-container .z-plane-info-container {
-	height: 20%;
+	height: 25px;
 	width: 100%;
 	text-align: center;
 	font-size: 14px;
 }
 
 .z-planes-container .z-plane-carousel {
-	height: 80%;
+	height: 110px;
 	width: 100%;
 	display: flex;
 }
